<resources>
    <string name="accept">Accept</string>
    <string name="action_edit">Edit</string>
    <string name="action_given_ratings">Show Given</string>
    <string name="action_received_ratings">Show Received</string>
    <string name="activate">Activate</string>
    <string name="activeJobs">Active Jobs</string>
    <string name="ad_description">The user says: %s</string>
    <string name="ad_title">Skill offered is: %s</string>
    <string name="ad_user">The timeslot is offered by: %s</string>
    <string name="add_a_timeslot">Add a Timeslot</string>
    <string name="advertisement">Offer Details</string>
    <string name="age">%d Years Old</string>
    <string name="ageTooltip">Age</string>
    <string name="all_ratings">All Ratings</string>
    <string name="all_skills">Skills Section</string>
    <string name="all_skills_offered">List of all skills offered</string>
    <string name="app_name">Timebanking</string>
    <string name="cancel">Cancel</string>
    <string name="comment">Comment:</string>
    <string name="date">Date</string>
    <string name="dateTooltip">Date</string>
    <string name="deactivate">Deactivate</string>
    <string name="delete">Delete</string>
    <string name="delete_skill">Delete a skill</string>
    <string name="delete_timeslot">Delete Timeslot</string>
    <string name="delete_timeslot_confirm">Do you really want to delete your timeslot?</string>
    <string name="description">Your description</string>
    <string name="descriptionTooltip">Description</string>
    <string name="duration">Duration</string>
    <string name="durationTooltip">Duration</string>
    <string name="edit">Edit</string>
    <string name="editButton">editButton</string>
    <string name="editImage">editImage</string>
    <string name="edit_your_profile">Edit Profile</string>
    <string name="emailTooltip">Email</string>
    <string name="email_address">Your email</string>
    <string name="enter_age">Enter your age…</string>
    <string name="enter_description">Enter your description…</string>
    <string name="enter_email">Enter email…</string>
    <string name="enter_full_name">Enter full name…</string>
    <string name="enter_location">Enter location…</string>
    <string name="enter_message">Message…</string>
    <string name="enter_nickname">Enter nickname…</string>
    <string name="filterBy">Filter by…</string>
    <string name="firebaseClientId">725588390853-r6vjbmnnf5aj4j4vj25qj3n4pmmve1o2.apps.googleusercontent.com</string>
    <string name="firebaseDefaultPic">gs://madproject-3381c.appspot.com/user.png</string>
    <string name="firebaseUserPic">gs://madproject-3381c.appspot.com/users_profile_pics/%s.png</string>
    <string name="free">FREE</string>
    <string name="fullNameTooltip">Full Name</string>
    <string name="full_name">Your full name</string>
    <string name="hour">10:00</string>
    <string name="insert_a_description">Insert a description…</string>
    <string name="insert_a_skill">Insert a skill</string>
    <string name="insert_a_title">Insert a title…</string>
    <string name="insert_date_and_time">Insert date and time…</string>
    <string name="insert_description">Insert a description…</string>
    <string name="insert_duration">Insert duration…</string>
    <string name="insert_location">Insert location…</string>
    <string name="insert_user_email">Insert user email</string>
    <string name="insert_user_name">Insert user name</string>
    <string name="interestedJobs">Interested Jobs</string>
    <string name="job">Job:</string>
    <string name="jobEnd">Job End</string>
    <string name="jobRequest">Job Requests</string>
    <string name="jobStart">Job Start</string>
    <string name="jobStatus">Status</string>
    <string name="loading">Loading data…</string>
    <string name="location">Your location</string>
    <string name="locationTooltip">Location</string>
    <string name="login_welcome">Welcome, please login</string>
    <string name="logout">Logout</string>
    <string name="message">Message</string>
    <string name="myChat">My Chat</string>
    <string name="my_profile">My Profile</string>
    <string name="nickname">Your nick name</string>
    <string name="nicknameTooltip">Nickname</string>
    <string name="no">No</string>
    <string name="no_consuming_jobs">You don\'t have any request</string>
    <string name="no_info">No data</string>
    <string name="no_jobs_with_status">You don\'t have any %s job</string>
    <string name="no_offers_date">No offer on %s/%s/%s was found</string>
    <string name="no_offers_duration">No offer for %d minutes was found</string>
    <string name="no_offers_found">No offer for %s was found</string>
    <string name="no_producing_jobs">You don\'t have any work to do</string>
    <string name="no_skills">No skills available</string>
    <string name="no_time">No time left</string>
    <string name="no_timeslots">You don\'t have any timeslots</string>
    <string name="no_ratings">No %s ratings found</string>
    <string name="offer">See Offer</string>
    <string name="optional_comment">Optional comment…</string>
    <string name="rate">Rate</string>
    <string name="rating_consumer">Rating as consumer</string>
    <string name="rating_producer">Rating as producer</string>
    <string name="reject">Reject</string>
    <string name="request">Request</string>
    <string name="requestedJobs">Requested Jobs</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="see_more">See more</string>
    <string name="select_job_status">Filter by status</string>
    <string name="send">Send</string>
    <string name="skill_with_timeslot">Choose your offer</string>
    <string name="skillsTooltip">Skills</string>
    <string name="sortBy">Sort by…</string>
    <string name="time">Your time</string>
    <string name="timeslot_details">Timeslot Details</string>
    <string name="timeslot_edit">Timeslot Edit</string>
    <string name="timeslot_list">My Timeslots</string>
    <string name="title">Title</string>
    <string name="titleTooltip">Title</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="update_skills">Update Skills</string>
    <string name="user">FullName</string>
    <string name="userImage">userImage</string>
    <string name="view">View</string>
    <string name="yes">Yes</string>
    <string name="insert_coupon">Please Insert Coupon</string>
    <string name="submit">Submit</string>
    <string name="used_coupon">Already Used Coupons</string>
    <string name="offerToolTip">Offer</string>
    <string name="userToolTip">Owner</string>
    <string name="fragment_coupon">Coupons</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_transactions">Transactions List</string>
    <string name="no_transactions">No Transactions</string>
</resources>