<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_edit"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_sortOffers"
        android:icon="@drawable/ic_sort_and_filter"
        android:title="@string/sortBy"
        android:visible="false"
        app:showAsAction="never">
    <menu />
    </item>
    <item
        android:id="@+id/action_filterOffers"
        android:icon="@drawable/ic_sort_and_filter"
        android:title="@string/filterBy"
        android:visible="false"
        app:showAsAction="never">

        <menu />
    </item>
    <item
        android:id="@+id/action_fav_off"
        android:icon="@drawable/ic_favorite_off"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_fav_on"
        android:icon="@drawable/ic_favorite_on"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_received_ratings"
        android:title="@string/action_received_ratings"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_given_ratings"
        android:title="@string/action_given_ratings"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filterJobs"
        android:title="@string/select_job_status"
        android:visible="false"
        app:showAsAction="never">
        <menu />
    </item>
    <item
        android:id="@+id/action_sortRatings"
        android:title="@string/sortBy"
        android:visible="false"
        app:showAsAction="never">
    <menu />
    </item>
</menu>