<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/shape"
    android:backgroundTint="@color/white"
    android:elevation="6dp"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.personal_timeslot.EditTimeslotFragment">

    <TextView
        android:id="@+id/TitleTooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/insert_a_title"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="@string/insert_a_title" />

    <TextView
        android:id="@+id/DescriptionTooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descriptionTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:drawableLeftCompat="@drawable/ic_info" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/insert_description"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="@string/insert_a_description"/>

    <TextView
        android:id="@+id/DateToolTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#BCF4DE"
            android:contentDescription="@string/editButton"
            app:srcCompat="@drawable/ic_calendar"
            app:elevation="0dp"/>

        <TextView
            android:id="@+id/editDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/DurationTooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/durationTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:drawableLeftCompat="@drawable/ic_clock" />

    <EditText
        android:id="@+id/editDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/insert_duration"
        android:inputType="number"
        android:minHeight="48dp"
        android:autofillHints="@string/insert_duration"/>

    <TextView
        android:id="@+id/LocationTooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locationTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:drawableLeftCompat="@drawable/ic_location" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/insert_location"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="@string/insert_location" />

    <TextView
        android:id="@+id/skillsToolTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skillsTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:drawableLeftCompat="@drawable/ic_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/skill_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/activateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#20BF55"
            android:textColor="@color/White"
            android:text="@string/activate"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/deactivateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#0096C7"
            android:text="@string/deactivate"
            android:textColor="@color/White"
            android:visibility="gone"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:backgroundTint="#F96E46"
            android:textColor="@color/White"
            android:text="@string/delete"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>
