<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="4dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/rating_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp">

        <TextView
            android:id="@+id/chatMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/user"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeslotTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="45dp"
            android:text="@string/title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:text="@string/hour"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:textSize="18sp"
            android:textStyle="italic" />

    </androidx.cardview.widget.CardView>
</LinearLayout>
