<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/shape"
    android:backgroundTint="@color/Light_Aquamarine"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.personal_timeslot.TimeslotDetailFragment">

    <TextView
        android:id="@+id/TitleTooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titleTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/no_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

    <TextView
        android:id="@+id/DescriptionTooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/descriptionTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:drawableLeftCompat="@drawable/ic_info" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/no_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/DateToolTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/dateTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:drawableLeftCompat="@drawable/ic_calendar_black" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/no_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/DurationTooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/durationTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:drawableLeftCompat="@drawable/ic_clock" />

    <TextView
        android:id="@+id/Duration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:text="@string/no_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/LocationTooltip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/locationTooltip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:drawableLeftCompat="@drawable/ic_location" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="10dp"
        android:text="@string/no_info"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>
