<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.user_profile.ShowProfileFragment"
    tools:visibility="visible">

    <LinearLayout
        android:id="@+id/externalLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight=".33"
            android:orientation="vertical"
            android:paddingTop="24dp"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="90dp"
                android:layout_gravity="center"
                >

            <ImageView
                android:id="@+id/userImage"
                android:contentDescription="@string/editImage"
                app:srcCompat="@drawable/user"
                tools:ignore="ImageContrastCheck,ImageContrastCheck"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".67">

            <LinearLayout
                android:id="@+id/textLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:autofillHints="Enter full name..."
                    android:hint="@string/enter_full_name"
                    android:inputType="textMultiLine"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColorHint="#78909C"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/nickName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter nickname..."
                    android:hint="@string/enter_nickname"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="#757575"
                    app:layout_constraintTop_toBottomOf="@id/fullName" />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter age..."
                    android:hint="@string/enter_age"
                    android:inputType="number"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="#757575"
                    app:layout_constraintTop_toBottomOf="@id/nickName" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter email..."
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="#757575"
                    app:layout_constraintTop_toBottomOf="@id/age" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter location..."
                    android:hint="@string/enter_location"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="#757575"
                    app:layout_constraintTop_toBottomOf="@id/email" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Enter your description..."
                    android:hint="@string/enter_description"
                    android:inputType="textMultiLine"
                    android:minHeight="48dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="#757575"
                    app:layout_constraintTop_toBottomOf="@id/location" />

                <Button
                    android:id="@+id/buttonSkill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_skills"
                    android:backgroundTint="@android:color/holo_blue_bright"
                    tools:ignore="ImageContrastCheck,ImageContrastCheck" />
                </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>