<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/delete_timeslot_confirm"
        android:id="@+id/confirm_message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:clickable="true"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/yes"
            android:textColor="@color/Blue_Ivy"
            android:id="@+id/yesButton"
            android:focusable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:clickable="true"
            android:padding="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/no"
            android:textColor="@color/Blue_Ribbon"
            android:id="@+id/noButton"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>